@@ -17,13 +17,14 @@ my %WriteMakefileArgs = (
   "NAME" => "Dancer2::Plugin::Auth::Tiny",
   "PREREQ_PM" => {
     "Carp" => 0,
-    "Dancer2" => "0.154000",
-    "Dancer2::Plugin" => 0,
+    "Dancer2" => "0.200000",
+    "Dancer2::Core::Types" => 0,
+    "Dancer2::Plugin" => "0.200000",
     "strict" => 0,
     "warnings" => 0
   },
   "TEST_REQUIRES" => {
-    "Dancer2" => "0.154000",
+    "Dancer2" => "0.200000",
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
     "File::Temp" => "0.19",
@@ -44,8 +45,9 @@ my %WriteMakefileArgs = (
 
 my %FallbackPrereqs = (
   "Carp" => 0,
-  "Dancer2" => "0.154000",
-  "Dancer2::Plugin" => 0,
+  "Dancer2" => "0.200000",
+  "Dancer2::Core::Types" => 0,
+  "Dancer2::Plugin" => "0.200000",
   "ExtUtils::MakeMaker" => 0,
   "File::Spec" => 0,
   "File::Temp" => "0.19",
