@@ -9,4 +9,4 @@ copyright_year   = 2016
 :version = 0.055
 
 [Prereqs]
-Dancer2 = 0.154000
+Dancer2 = 0.200000
